--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,10 +8,9 @@ body {
 }
 
 /* Style the header */
-.header {
-  background-color: #f1f1f1;
-  padding: 20px;
-  text-align: center;
+.logo {
+ max-width: 10%;
+  height: auto;
 }
 
 </style>
