--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,10 @@ body {
   height: 100x;
   width: auto;
 }
-
+.headermap {
+  float: right;
+	width:auto;
+	height:100px;
 </style>
 
 /* Style the topnav. Section by Ian Wright. Sourced from W3Schools */
