--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,19 @@ body {
   margin: 0;
 }
 
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 /* Style the logo */
 .logo {
  
