--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,12 +13,12 @@ body {
   padding: 5px;
 }
 
-/* Clearfix (clear floats) 
+/* Clearfix (clear floats) */
 .row::after {
   content: "";
   clear: both;
   display: table;
-} */
+} 
 
 /* Style the logo 
 .logo {
