--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,18 +7,15 @@ body {
   margin: 0;
 }
 
-.column {
-  float: left;
-  width: 50.00%;
-  padding: 5px;
+.row {
+  display: flex;
 }
 
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-} 
+/* Create three equal columns that sits next to each other */
+.column {
+  flex: 49.9%;
+  padding: 5px;
+}
 
 /* Style the logo 
 .logo {
