--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,29 +3,13 @@
   box-sizing: border-box;
 }
 
-/* body {
+body {
   margin: 0;
-} */
-
-
-/* Create two equal columns that sits next to each other */
+} 
 
 
 /* Style the logo */
 
-
-.box {
-  float right
-  width: 50%;
-  height: 100px;
-	
-} 
- 
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
 
 </style>
 
