--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body {
 .flex-container {
   display: flex;
   flex-wrap: nowrap;
-  background-color: DodgerBlue;
+  background-color: #f2f2f2;
 }
 
 .flex-container .box {
