--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-<style>
+
 * {
   box-sizing: border-box;
 }
@@ -22,11 +22,11 @@ body {
   font-size: 30px;
 }
 
-</style>
+
 
 /* Style the topnav. Section by Ian Wright. Sourced from W3Schools */
 
-<style>
+
 body {margin:0;font-family:Arial}
 
 .topnav {
@@ -132,20 +132,20 @@ body {margin:0;font-family:Arial}
   }
 }
 
-</style>
 
-<style>
+
+
 /* Footer*/
 footer {
-  padding: 100px
+  padding: 100px;
 }
 footer {
-  color: white
-  background-color: black
+  color: white;
+  background-color: black;
 }
 .footer-bottom.area {
-  padding: 20px
-  color: white
-  background-color: black
+  padding: 20px;
+  color: white;
+  background-color: black;
 }
-</style>
+
