--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,16 +107,16 @@ body {
 .flex-container {
   display: flex;
   flex-wrap: nowrap;
-  background-color: #f2f2f2;
+  background-color: #4CAF50;
 }
 
 .flex-container .box {
   background-color: #f2f2f2;
-  width: 40%;
+  width: 33.33%;
   margin: 10px;
   text-align: left;
   line-height: 45px;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 
