--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,9 +3,10 @@
 /* Inspired by https://www.w3schools.com/howto/howto_css_center_website.asp */
 .content {
   max-width: 1200px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 2%;
-    margin-top: 1%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 2%;
+  margin-top: 1%;
+  margin: auto;
 }
 
 /* ABOUT US SECTION */
