--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,16 @@
 /* ABOUT US SECTION */
 
 /* Parralax */
-.parallax-1, .parallax-2, .parallax-3, parallax-4 {
+.parallax-1, .parallax-2 {
+  position: relative;
+  opacity: 0.65;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax-3, .parallax-4 {
   position: relative;
   opacity: 0.65;
   background-attachment: fixed;
@@ -22,22 +31,22 @@
 }
 
 .parallax-1 {
-  background-image: "parallax_1";
+  background-image: "parallax_1.jpg";
   min-height: 100%;
 }
 
 .parallax-2 {
-  background-image: "parallax_2";
+  background-image: "parallax_2.jpg";
   min-height: 100%;
 }
 
 .parallax-3 {
-  background-image: "parallax_3";
+  background-image: "parallax_3.jpg";
   min-height: 100%;
 }
 
 .parallax-4 {
-  background-image: "parallax_4";
+  background-image: "parallax_4.jpg";
   min-height: 100%;
 }
 
