--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,10 @@
 /* ABOUT US SECTION */
 
 /* Parralax */
+body, html {
+  height: 100%;
+}
+
 .parallax-1 {
   background-image: url("parallax_1.jpg");
   min-height: 100%;
