--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,22 +17,22 @@ body, html {
 }
 
 .parallax-1 {
-  background-image: url("parallax_1.jpg");
+  background-image: url("Images/parallax_1.jpg");
   min-height: 100%;
 }
 
 .parallax-2 {
-  background-image: url("parallax_2.jpg");
+  background-image: url("Images/parallax_2.jpg");
   min-height: 100%;
 }
 
 .parallax-3 {
-  background-image: url("parallax_3.jpg");
+  background-image: url("Images/parallax_3.jpg");
   min-height: 100%;
 }
 
 .parallax-4 {
-  background-image: url("parallax_4.jpg");
+  background-image: url("Images/parallax_4.jpg");
   min-height: 100%;
 }
 
@@ -126,8 +126,8 @@ body, html {
   }
   
   /* Create two columns that float next to eachother */
-  .column {
-    background-image: url("drone-background.jpg");
+  .Section-1 {
+    background-image: url("Images/drone-background.jpg");
     background-size: auto;
     float: left;
     width: 50%;
@@ -135,12 +135,6 @@ body, html {
     padding: 20px;
   }
   
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
