--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,10 +60,10 @@ body, html {
 }
 
 .parallel-text {
-  background-color: white;
-  color: #777;
+  background-color: #111;
+  color: #fff;
   text-align: center;
-  padding: 50px 80 px;
+  padding: 50px 80px;
   text-align: justify;
 }
 
