--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,6 @@ body, html {
   color: #fff;
   text-align: center;
   padding: 50px 80px;
-  text-align: justify;
   letter-spacing: 7px;
 }
 
@@ -81,6 +80,7 @@ body, html {
 /* Add some shadows to create a card effect */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 
