--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,24 @@ body, html {
   text-align: center;
 }
 
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+  text-align: center;
+}
+
+/* Clear floats */
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+  color: LightSteelBlue;
+}
+
+.title {
+  color: grey;
+}
+
 
 /* ---------- CONTACT SECTION ---------- */
 
