tryna pretty up the meet the team section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,13 @@
+/* Font combination; inspired from:
+https://www.w3schools.com/cssref/css_websafe_fonts.asp */
+
+body {
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	color: #2F4F4F;	/*DarkSlateGrey*/
+	margin: auto;
+	text-align: center;
+}
+
 /* ---------- CENTER CONTENT ---------- */
 
 /* Inspired by https://www.w3schools.com/howto/howto_css_center_website.asp */
@@ -85,8 +95,16 @@ body, html {
 
 /* Some left and right padding inside the container */
 .container {
-  padding: 0 16px;
-  text-align: center;
+  width: 50%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	text-align: center;
+	
+	display: inline-block; /* Box outline */
+	border: 1px solid #696969;
+	border-radius: 8px;
+	margin-top: 100px;
+	width: 50%;
+	padding: 8px;
 }
 
 /* Clear floats */
