--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,6 +73,7 @@ body, html {
   position: absolute;
   background-color: #111;
   color: #fff;
+  align-content: center;
   text-align: center;
   padding: 50px 80px;
   letter-spacing: 7px;
@@ -124,7 +125,7 @@ body, html {
 
 /* Background Image */
 /* Inspired by w3schools - paired with specific parameters to show a background and create a design */
-.bg1 {
+.background-1 {
   background-image: url("Images/background_1.jpg");
   min-height: 500px;
   background-repeat: no-repeat;
