--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,3 @@
-/* Font combination; inspired from:
-https://www.w3schools.com/cssref/css_websafe_fonts.asp */
-
-body {
-	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	color: #2F4F4F;	/*DarkSlateGrey*/
-	margin: auto;
-	text-align: center;
-}
-
 /* ---------- CENTER CONTENT ---------- */
 
 /* Inspired by https://www.w3schools.com/howto/howto_css_center_website.asp */
@@ -87,6 +77,59 @@ body, html {
 }
 
 /* Meet the team */
+
+/* Three columns side by side */
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+/* Add some shadows to create a card effect */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+}
+
+/* Clear floats */
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
 
 /* Add some shadows to create a card effect */
 .card {
@@ -168,18 +211,7 @@ body, html {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 10px;
-  }
-  
-  /* Create two columns that float next to eachother */
-  .Section-1 {
-    background-image: url("Images/drone-background.jpg");
-    background-size: auto;
-    float: left;
-    width: 50%;
-    margin-top: 6px;
-    padding: 20px;
-  }
-  
+  }  
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
