--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,7 +140,7 @@ body, html {
 /* Inspired by w3schools - paired with specific parameters to show a background and create a design */
 .background-1 {
   background-image: url("Images/background_1.jpg");
-  min-height: 500px;
+  height: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
