--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@ body, html {
   letter-spacing: 10px;
 }
 
-.parallel-text {
+.parallax-text {
   position: absolute;
   background-color: #111;
   color: #fff;
