--- a/stylesheet.css
+++ b/stylesheet.css
@@ -300,7 +300,20 @@ body {margin:0;font-family:Arial}
   }
 }
 
+.column1 {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
 
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column1 {
+    width: 100%;
+    display: block;
+  }
+}
 
 
 /* Footer*/
