--- a/stylesheet.css
+++ b/stylesheet.css
@@ -324,15 +324,15 @@ body {margin:0;font-family:Arial}
 .leftside-footer {
   padding: 40px;
   color: white;
-  background-color: rgb(68, 63, 63);
+  background-color: #333;
 }
 .rightside-footer {
   padding: 40px;
   color: white;
-  background-color: rgb(68, 63, 63);
+  background-color: #333;
 }
 .footer-container {
-  background-color: rgb(68,63,63);
+  background-color: #333;
 }
 .footer-bottom-area {
   color: white;
