--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,6 +97,8 @@ body, html {
 /* Add some shadows to create a card effect */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Some left and right padding inside the container */
@@ -144,7 +146,7 @@ body, html {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: relative;
 }
 
 /* Section 1 - Email Contact Us */
@@ -181,7 +183,7 @@ body, html {
     text-align: center;
     position: absolute;
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: white;
     padding: 10px;
   }  
   
