--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,6 +106,7 @@ body, html {
   padding: 0 16px;
   background-color: white;
   color: grey;
+  display: inline-block;
   text-align: center;
 }
 
