--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,10 +111,6 @@ html {
 /* Some left and right padding inside the container */
 .container {
   padding: 0 16px;
-  background-color: white;
-  color: grey;
-  display: inline-block;
-  text-align: center;
 }
 
 /* Clear floats */
@@ -122,6 +118,7 @@ html {
   content: "";
   clear: both;
   display: table;
+  color: LightSteelBlue;
 }
 
 .title {
