--- a/stylesheet.css
+++ b/stylesheet.css
@@ -407,4 +407,9 @@ body {margin:0;font-family:Arial}
 .footer-bottom-area {
   color: white;
 }
+@media only screen and (max-width: 600px){
+  .leftside-footer .rightside-footer .footer-bottom-area .footer-container{
+    width: 100%
+  }
+}
 
