--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,8 +99,8 @@ body, html {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin-left: auto;
   margin-right: auto;
-  height: 20rem;
-  background-image: center no-repeat;
+  height: 100%;
+  background-image: center;
   background-size: cover;
 }
 
