--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,7 +78,7 @@ body, html {
 
 /* Meet the team */
 
-/* Three columns side by side */
+/* Three columns side by side
 .column {
   float: left;
   width: 33.3%;
@@ -87,12 +87,12 @@ body, html {
 }
 
 /* Display the columns below each other instead of side by side on small screens */
-@media screen and (max-width: 650px) {
+/* @media screen and (max-width: 650px) {
   .column {
     width: 100%;
     display: block;
   }
-}
+} */ */
 
 /* Add some shadows to create a card effect */
 .card {
