--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,6 +96,7 @@ body, html {
 
 /* Add some shadows to create a card effect */
 .card {
+  float: left;
   margin-left: auto;
   margin-right: auto;
   height: 100%;
@@ -105,6 +106,7 @@ body, html {
 
 /* Some left and right padding inside the container */
 .container {
+  float: right;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 0 16px;
 }
