--- a/stylesheet.css
+++ b/stylesheet.css
@@ -414,6 +414,7 @@ body {margin:0;font-family:Arial}
 /* Index*/
 .index-background{
   background-image: url("Images/backgroundindex.jpg");
+  min-height: 100%;
   position: relative;
   opacity: 0.65;
   background-attachment: fixed;
