--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,6 +94,12 @@ body, html {
   }
 } */ */
 
+.team-container {
+  margin: 20px 20px 0 0;
+  border: 5px solid #333;
+  overflow: auto
+}
+
 /* Add some shadows to create a card effect */
 .card {
   float: left;
