--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@ body, html {
 }
 
 /* Add some shadows to create a card effect */
-.card {
+.img-container {
   float: left;
   margin-left: auto;
   margin-right: auto;
@@ -111,7 +111,7 @@ body, html {
 }
 
 /* Some left and right padding inside the container */
-.container {
+.card-container {
   float: right;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 0 16px;
