--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,21 +97,17 @@ body, html {
 .team-container {
   margin: 20px 20px 0 0;
   border: 5px solid #333;
-  overflow: auto
+  overflow: auto 
 }
 
 /* Add some shadows to create a card effect */
 .card {
   float: left;
-  margin-left: auto;
-  margin-right: auto;
   display: block;
-  background-image: center;
-  background-size: cover;
 }
 
 /* Some left and right padding inside the container */
-.container {
+.card-container {
   float: right;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 0 16px;
@@ -120,11 +116,10 @@ body, html {
 .card-content {
   margin: 0 auto;
   clear: both
-  display: flex;
 }
 
 /* Clear floats */
-.container::after, .row::after {
+.card-container::after, .row::after {
   content: "";
   clear: both;
   display: table;
