--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,7 +206,6 @@ body, html {
       margin-top: 0;
     }
   }
-  
 
 
 /* Style the topnav. Section by Ian Wright. Sourced from W3Schools */
@@ -418,6 +417,7 @@ body {margin:0;font-family:Arial}
   }
 }
 
+/* Index */
 
 
 /* Footer*/
