--- a/stylesheet.css
+++ b/stylesheet.css
@@ -395,7 +395,7 @@ body {margin:0;font-family:Arial}
 
 /* Grey list item */
 .price .grey {
-  background-color: #eee;
+  background-color: white;
   font-size: 20px;
 }
 
