--- a/stylesheet.css
+++ b/stylesheet.css
@@ -419,7 +419,10 @@ body {margin:0;font-family:Arial}
 }
 
 /* Index */
-
+.index-column{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:18px
+}
 
 /* Footer*/
 
