--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,14 +78,6 @@ body, html {
 
 /* Meet the team */
 
-/* Three columns side by side
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-
 /* Display the columns below each other instead of side by side on small screens */
 /* @media screen and (max-width: 650px) {
   .column {
@@ -94,37 +86,34 @@ body, html {
   }
 } */ */
 
-.team-container {
-  margin: 20px 20px 0 0;
-  border: 5px solid #333;
-  overflow: auto 
-}
-
 /* Add some shadows to create a card effect */
 .card {
-  float: left;
-  display: block;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 /* Some left and right padding inside the container */
-.card-container {
-  float: right;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 0 16px;
-}
-
-.card-content {
-  margin: 0 auto;
-  clear: both
+.container {
+  width: 50%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	text-align: center;
+	
+	display: inline-block; /* Box outline */
+	border: 1px solid #696969;
+	border-radius: 8px;
+	margin-top: 100px;
+	width: 50%;
+	padding: 8px;
 }
 
 /* Clear floats */
-.card-container::after, .row::after {
+.container::after, .row::after {
   content: "";
   clear: both;
   display: table;
   color: LightSteelBlue;
 }
+
 
 .title {
   color: white;
