--- a/stylesheet.css
+++ b/stylesheet.css
@@ -410,6 +410,7 @@ body {margin:0;font-family:Arial}
 /* Index */
 
 .index-column{
+  margin: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-size:18px
 }
