--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,7 +104,9 @@ body, html {
 	border-radius: 8px;
 	margin-top: 100px;
 	width: 50%;
-	padding: 8px;
+  padding: 8px;
+  
+  color: grey;
 }
 
 /* Clear floats */
