--- a/stylesheet.css
+++ b/stylesheet.css
@@ -184,7 +184,7 @@ body, html {
   }
   
   /* Style the container/contact section */
-  .container {
+  .contact-container {
     text-align: center;
     position: absolute;
     border-radius: 5px;
