--- a/stylesheet.css
+++ b/stylesheet.css
@@ -185,6 +185,7 @@ body, html {
   
   /* Style the container/contact section */
   .contact-container {
+    margin: auto;
     text-align: center;
     position: absolute;
     border-radius: 5px;
