--- a/stylesheet.css
+++ b/stylesheet.css
@@ -421,6 +421,7 @@ body {margin:0;font-family:Arial}
 /* Footer*/
 
 .leftside-footer {
+  margin:20px;
   padding: 40px;
   color: white;
   background-color: #333;
@@ -434,6 +435,7 @@ body {margin:0;font-family:Arial}
   background-color: #333;
 }
 .footer-bottom-area {
+  margin:20px;
   color: white;
 }
 
