--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,6 +95,7 @@ body, html {
 
 /* Some left and right padding inside the container */
 .container {
+  right: 0;
   width: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
@@ -106,7 +107,7 @@ body, html {
 	width: 50%;
   padding: 8px;
   
-  color: grey;
+  color: white;
 }
 
 /* Clear floats */
@@ -114,7 +115,7 @@ body, html {
   content: "";
   clear: both;
   display: table;
-  color: LightSteelBlue;
+  color: white;
 }
 
 
@@ -151,7 +152,7 @@ body, html {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-attachment: relative;
+  position: relative;
 }
 
 /* Section 1 - Email Contact Us */
@@ -185,7 +186,9 @@ body, html {
   
   /* Style the container/contact section */
   .contact-container {
-    margin: auto;
+    right: 0;
+    margin: 20px;
+    max-width: 300px;
     text-align: center;
     position: absolute;
     border-radius: 5px;
