--- a/stylesheet.css
+++ b/stylesheet.css
@@ -148,11 +148,12 @@ body, html {
 /* Inspired by w3schools - paired with specific parameters to show a background and create a design */
 .background-1 {
   background-image: url("Images/background_1.jpg");
-  height: 100%;
-  background-repeat: no-repeat;
+  min-height: 100%;
+  background-attachment: fixed;
+  background-color: transparent;
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
 }
 
 /* Section 1 - Email Contact Us */
