fixing footer css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -422,7 +422,6 @@ body {margin:0;font-family:Arial}
 /* Footer*/
 
 .leftside-footer {
-  margin:20px;
   padding: 40px;
   color: white;
   background-color: #333;
@@ -435,8 +434,11 @@ body {margin:0;font-family:Arial}
 .footer-container {
   background-color: #333;
 }
-.footer-bottom-area {
+.footer-links{
+  color:white;
   margin:20px;
+}
+.footer-bottom-area {
   color: white;
 }
 
