--- a/stylesheet.css
+++ b/stylesheet.css
@@ -440,7 +440,7 @@ body {margin:0;font-family:Arial}
 }
 .footer-links{
   color:white;
-  margin:20px;
+  margin-left:20px;
 }
 .footer-bottom-area {
   color: white;
