--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,6 +154,7 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 /* Section 1 - Email Contact Us */
@@ -187,14 +188,13 @@ input[type=submit]:hover {
   
 /* Style the container/contact section */
 .contact-container {
-  right: 0;
-  margin: 20px;
-  max-width: 300px;
   text-align: center;
   position: absolute;
   background-color: white;
   border-radius: 5px;
   padding: 10px;
+  top: 50%;
+  left: 50%;
 }  
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
