--- a/stylesheet.css
+++ b/stylesheet.css
@@ -336,7 +336,7 @@ body {margin:0;font-family:Arial}
 }
 
 .header5 {
-  background-image: url("Images/background_1.jpg");
+  background-image: url("Images/World.png");
   padding: 20px;
   text-align: center;
   font-size: 35px;
