center text footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -438,7 +438,7 @@ body {margin:0;font-family:Arial}
 .footer-container {
   background-color: #333;
   color: white;
-  text-align: justify;
+  text-align: center;
 }
 
 .footer-bottom-area {
