--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,23 @@
+/* Banner Image */
+.wrapperBanner {
+  width: 100%;
+  height: 200px;
+  background: url("Images/cdilogo2.png");
+  text-align: center;
+}
+
+.wrapperBanner .banner-image {
+  width: 1000px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.wrapperBanner .banner-image img {
+  width: 1000px;
+  height: 200px;
+  margin: 0 auto;
+}
+
 /* ---------- CENTER CONTENT ---------- */
 
 /* Inspired by https://www.w3schools.com/howto/howto_css_center_website.asp */
