no repeated banner image

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 .wrapperBanner {
   width: 100%;
   height: 200px;
-  background: url("Images/cdilogo2.png");
+  background: url("Images/cdilogo2.png") repeat-x 0 0;
   text-align: center;
 }
 
