--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,9 @@
 /* Banner Image */
 .wrapperBanner {
   width: 100%;
-  height: 200px;
+  height: 200px;i
   background: url("Images/cdilogo2.png");
+  background-position: 100% 100%;
   background-repeat: no-repeat;
   text-align: center;
 }
