--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,9 @@
 /* Banner Image */
 .wrapperBanner {
-  width: 100vw;
-  background: url("Images/cdilogo2.png");
-  background-position: 100%;
+  background-image: url("Images/cdilogo2.png");
+  background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
-  text-align: center;
 }
 
 /* ---------- CENTER CONTENT ---------- */
