--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 /* Banner Image */
-.wrapperBanner {
+.banner-image {
   background-image: url("Images/cdilogo2.png");
   background-size: cover;
   background-position: center center;
