--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 .wrapperBanner {
   background-image: url("Images/cdilogo2.png");
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
