--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,8 @@
 /* Banner Image */
+body, html {
+  height: 100%;
+}
+
 .wrapperBanner {
   background-image: url("Images/cdilogo2.png");
   background-size: cover;
