--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,3 @@
-/* Banner Image */
-body, html {
-  height: 100%;
-}
-
-.wrapperBanner {
-  background-image: url("Images/cdilogo2.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
 /* ---------- CENTER CONTENT ---------- */
 
 /* Inspired by https://www.w3schools.com/howto/howto_css_center_website.asp */
@@ -19,6 +7,15 @@ body, html {
   padding: 2%;
   margin-top: 1%;
   margin: auto;
+}
+
+/* Banner Image */
+.wrapperBanner {
+  background-image: url("Images/cdilogo2.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
 }
 
 /* ---------- ABOUT US SECTION ---------- */
