--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,9 +13,8 @@
 .wrapperBanner {
   background-image: url("Images/cdilogo2.png");
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
-  position: relative;
 }
 
 /* ---------- ABOUT US SECTION ---------- */
