--- a/stylesheet.css
+++ b/stylesheet.css
@@ -187,7 +187,7 @@ input[type=submit]:hover {
 }
   
 /* Style the container/contact section */
-.contact-container {
+.Section-1 {
   text-align: center;
   position: absolute;
   background-color: white;
