--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@
 
 /* Banner Image */
 .banner-image {
-  background-image: url("Images/cdilogo2.png");
+  background-color: black;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
