--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,10 +11,11 @@
 
 /* Banner Image */
 .banner-image {
-  background-color: black;
+  background-color: #333;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  text-align: center;
 }
 
 /* ---------- ABOUT US SECTION ---------- */
