--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@
 
 /* Banner Image */
 .banner-image {
-  background-color: #333;
+  background-color: rgb(34,34,34); /* black to match logo */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
