--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,7 +74,7 @@ body, html {
   align-content: center;
   text-align: center;
   padding: 50px 80px;
-  letter-spacing: 5px;
+  /* letter-spacing: 5px; */
   text-align: justify;
 }
 
@@ -89,25 +89,28 @@ body, html {
 
 /* Add some shadows to create a card effect */
 .card {
-  text-align: center;
-  float: left;
+  /* text-align: center; */
+  /* float: left; */
+  display: flex;
+  /* justify-content: center; */
 }
 
 /* Some left and right padding inside the container */
 .container {
-  right: 0;
-  width: 50%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  text-align: center;
-	
-	display: inline-block; /* Box outline */
-	border: 1px solid #696969;
-	border-radius: 8px;
-	margin-top: 100px;
-	width: 50%;
-  padding: 8px;
-  
-  color: white;
+  /* right: 0; */
+  /* width: 50%; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* text-align: center; */
+  display: inline-block; /* Box outline */
+  border: 1px solid #696969;
+  /* border-radius: 8px; */
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  /* margin-top: 100px; */
+  width: 75%;
+  padding: 13px 24px;
+  /* color: #696969; */
+  /* background-color: white; */
 }
 
 /* Clear floats */
@@ -451,4 +454,3 @@ body {margin:0;font-family:Arial}
     width: 100%
   }
 }
-
