--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,7 +74,7 @@ body, html {
   align-content: center;
   text-align: center;
   padding: 50px 80px;
-  /* letter-spacing: 5px; */
+  letter-spacing: 5px;
   text-align: justify;
 }
 
@@ -89,28 +89,25 @@ body, html {
 
 /* Add some shadows to create a card effect */
 .card {
-  /* text-align: center; */
-  /* float: left; */
-  display: flex;
-  /* justify-content: center; */
+  text-align: center;
+  float: left;
 }
 
 /* Some left and right padding inside the container */
 .container {
-  /* right: 0; */
-  /* width: 50%; */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  /* text-align: center; */
-  display: inline-block; /* Box outline */
-  border: 1px solid #696969;
-  /* border-radius: 8px; */
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  /* margin-top: 100px; */
-  width: 75%;
-  padding: 13px 24px;
-  /* color: #696969; */
-  /* background-color: white; */
+  right: 0;
+  width: 50%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+	
+	display: inline-block; /* Box outline */
+	border: 1px solid #696969;
+	border-radius: 8px;
+	margin-top: 100px;
+	width: 50%;
+  padding: 8px;
+  
+  color: white;
 }
 
 /* Clear floats */
@@ -209,7 +206,7 @@ input[type=submit]:hover {
   }
 
 
-/* Style the topnav. Section by Ian Wright. Sourced from W3Schools */
+/* Style for the navigation bar. Section by Ian Wright. Sourced from W3Schools */
 
 body {margin:0;font-family:Arial}
 
@@ -289,6 +286,7 @@ body {margin:0;font-family:Arial}
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
+	
   .topnav a.icon {
     float: right;
     display: block;
@@ -302,11 +300,13 @@ body {margin:0;font-family:Arial}
     right: 0;
     top: 0;
   }
+	
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+	
   .topnav.responsive .dropdown {float: none;}
   .topnav.responsive .dropdown-content {position: relative;}
   .topnav.responsive .dropdown .dropbtn {
@@ -326,6 +326,7 @@ body {margin:0;font-family:Arial}
 }
 
 /* Display the columns below each other instead of side by side on small screens */
+
 @media screen and (max-width: 600px) {
   .column1 {
     width: 100%;
@@ -357,7 +358,8 @@ body {margin:0;font-family:Arial}
   box-sizing: border-box;
 }
 
-/* Create three columns of equal width for price list ********Pricing List */
+/* Create three columns of equal width for price list. Design inspired by www.dronedeploy.com/pricing.html  */
+
 .columns2 {
   float: left;
   width: 33.3%;
@@ -426,7 +428,7 @@ body {margin:0;font-family:Arial}
   font-size:18px
 }
 
-/* Footer*/
+/* Footer. Designed by Dani Cotton*/
 
 .leftside-footer {
   padding: 40px;
@@ -454,3 +456,4 @@ body {margin:0;font-family:Arial}
     width: 100%
   }
 }
+
