--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,7 +74,7 @@ body, html {
   align-content: center;
   text-align: center;
   padding: 50px 80px;
-  /* letter-spacing: 5px; */
+  letter-spacing: 5px;
   text-align: justify;
 }
 
