--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,8 +89,16 @@ body, html {
 
 /* Add some shadows to create a card effect */
 .card {
-  text-align: center;
-  float: left;
+  display: flex;
+}
+
+/* Setting image size */
+.img-container {
+  width: 25%;
+}
+
+.img-content {
+  width: 100%;
 }
 
 /* Some left and right padding inside the container */
