--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,7 +69,7 @@ body, html {
 }
 
 .parallax-text {
-  background-color: #656565;
+  background-color: #111;
   color: #fff;
   align-content: center;
   text-align: center;
@@ -99,20 +99,21 @@ body, html {
 
 .img-content {
   width: 100%;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
 }
 
 /* Some left and right padding inside the container */
 .container {
-  width: 75%;
+  right: 0;
+  width: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+  text-align: center;
+	
 	display: inline-block; /* Box outline */
 	border: 1px solid #696969;
 	border-radius: 8px;
 	margin-top: 100px;
-  padding: 20px;
+	width: 50%;
+  padding: 8px;
   
   color: white;
 }
@@ -347,7 +348,7 @@ body {margin:0;font-family:Arial}
 }
 
 .header5 {
-  background-image: url("Images/sunrise1.jpg"); /*imaged sourcewd from https://www.religiousstudiesproject.com/ */
+  background-image: url("Images/sunrise3.jpg"); /*imaged sourcewd from https://www.religiousstudiesproject.com/ */
   padding: 20px;
   text-align: center;
   font-size: 35px;
