--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,13 +153,14 @@ body, html {
 /* Inspired by w3schools - paired with specific parameters to show a background and create a design */
 .background-1 {
   background-image: url("Images/background_1.jpg");
-  min-height: 100%;
   background-attachment: fixed;
   background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: absolute;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  height: 100vh;
 }
 
 /* Section 1 - Email Contact Us */
@@ -196,8 +197,8 @@ input[type=submit]:hover {
   text-align: left;
   background-color: white;
   border-radius: 5px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 15px;
+  top: 10px;
   max-width: 800px;
 }  
   
