--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,10 @@
+/* ---------- FONTS ---------- */
+/* Found from https://www.w3schools.com/howto/howto_google_fonts.asp */
+
+body {
+  font-family: 'Roboto';
+}
+
 /* ---------- CENTER CONTENT ---------- */
 
 /* Inspired by https://www.w3schools.com/howto/howto_css_center_website.asp */
