--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 /* Found from https://www.w3schools.com/howto/howto_google_fonts.asp */
 
 body {
-  font-family: 'Roboto';
+  font-family: Roboto;
 }
 
 /* ---------- CENTER CONTENT ---------- */
