--- a/stylesheet.css
+++ b/stylesheet.css
@@ -446,7 +446,7 @@ input[type=submit]:hover {
 }
 
 /* Portfolio*/
-.container-portfolio {
+.container-port {
   width: 100%;
   padding: 10px;
   color: white;
