--- a/stylesheet.css
+++ b/stylesheet.css
@@ -492,6 +492,10 @@ input[type=submit]:hover {
   color: white;
 }
 
+.rightside-footer{
+  position: absolute;
+  right: 0px;
+}
 /* Make footer responsive*/
 @media only screen and (max-width: 600px){
   .leftside-footer .rightside-footer .footer-bottom-area .footer-container{
