--- a/stylesheet.css
+++ b/stylesheet.css
@@ -494,6 +494,7 @@ input[type=submit]:hover {
 
 .rightside-footer{
  display: block;
+ margin-left: auto;
  margin-right: 0px;
 }
 /* Make footer responsive*/
