added margin-bottom to cards on about

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,6 +101,7 @@ body, html {
 /* Add some shadows to create a card effect */
 .card {
   display: flex;
+  margin-bottom: 20px;
 }
 
 /* Setting image size */
