--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,24 +141,9 @@ body, html {
   font-style: italic;
 }
 
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-}
-
 
 /* ---------- CONTACT SECTION ---------- */
+
 
 /* Written by Christine */
 
@@ -213,6 +198,7 @@ input[type=submit]:hover {
   padding: 15px;
   top: 10px;
   max-width: 800px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }  
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
