--- a/stylesheet.css
+++ b/stylesheet.css
@@ -434,7 +434,7 @@ input[type=submit]:hover {
   }
 }
 
-/* Index */
+/* Index by Dani Cotton*/
 
 .index-column{
   font-size:18px
@@ -446,14 +446,14 @@ input[type=submit]:hover {
   background-color: #696969;
   text-align: center;
 }
-
+/* Make index responsive*/
 @media only screen and (max-width: 600px){
   .index-column .container-index .index-row{
     width: 100%;
   }
 }
 
-/* Portfolio*/
+/* Portfolio by Dani Cotton*/
 .container-port {
   width: 100%;
   padding: 10px;
@@ -464,6 +464,8 @@ input[type=submit]:hover {
 .port-column {
   font-size: 18px
 }
+
+/* Make portfolio responsive*/
 @media only screen and (max-width: 600px){
     .container-port .port-column .port-row{
       width: 100%;
