--- a/stylesheet.css
+++ b/stylesheet.css
@@ -201,6 +201,10 @@ input[type=submit]:hover {
   max-width: 800px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }  
+
+.contact-info {
+  height: 100px;
+}
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
